Se vinculo la hoja de estilos.css y se agrego el segundo contenedor que tiene la imagen centrada.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Comenzando con la Fotografia</title>
   </head>
   <body>
     <header>
-      <section id="encabezado">
+      <section id="contenido">
         <h1>Comensando con la Fotografia</h1>
-        <div class="contenedor">
-
-        </div>
+        <section id="imgCentro">
+          <img src="img/paisaje.jpg">
+        </section>
       </section>
-
     </header>
   </body>
 </html>
