se agrego el menu.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -9,7 +9,12 @@
   <body>
     <header>
       <section id="contenido">
-        <h1>Comensando con la Fotografia</h1>
+        <section id="encabezado">
+          <h1>Comensando con la Fotografia</h1>
+          <a href="index.html">Inicio</a>
+          <a href="html/paisajes.html">Paisajes</a>
+          <a href="html/Retratos.html">Retratos</a>
+        </section>
         <section id="imgCentro">
           <img src="img/paisaje.jpg">
         </section>
