Se arreglo el titulo y el menu en html y se agregaron los estilos necesarios.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -10,10 +10,20 @@
     <header>
       <section id="contenido">
         <section id="encabezado">
-          <h1>Comensando con la Fotografia</h1>
-          <a href="index.html">Inicio</a>
-          <a href="html/paisajes.html">Paisajes</a>
-          <a href="html/Retratos.html">Retratos</a>
+          <div id="menu">
+            <div id="titulo">
+              Comensando con la Fotografia
+            </div>
+            <div>
+              <a href="html/Retratos.html">Retratos</a>
+            </div>
+            <div>
+              <a href="html/paisajes.html">Paisajes</a>
+            </div>
+            <div>
+              <a href="index.html">Inicio</a>
+            </div>
+          </div>
         </section>
         <section id="imgCentro">
           <img src="img/paisaje.jpg">
