--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <title>Comenzando con la Fotografia</title>
   </head>
   <body>
@@ -15,10 +16,10 @@
               Comensando con la Fotografia
             </div>
             <div>
-              <a href="html/Retratos.html">Retratos</a>
+              <a class="menu" href="html/Retratos.html">Retratos</a>
             </div>
             <div>
-              <a href="html/paisajes.html">Paisajes</a>
+              <a class="menu" href="html/paisajes.html">Paisajes</a>
             </div>
             <div>
               <a href="index.html">Inicio</a>
