Se comenzo a trabajar con las imagenes secundarias.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -29,6 +29,9 @@
         <section id="imgCentro">
           <img src="img/paisaje.jpg">
         </section>
+        <section id="imgSecundaria">
+          
+        </section>
       </section>
     </header>
   </body>
