Se arreglo el tamaño de la pagina a 900px y se centro y se arreglo el tamaño de la imagen principal.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <section id="contenido">
+      <div id="contenido">
         <section id="encabezado">
           <div id="menu">
             <div id="titulo">
@@ -27,12 +27,13 @@
           </div>
         </section>
         <section id="imgCentro">
-          <img src="img/paisaje.jpg">
+          <img src="img/paisaje.jpg" class="imgPrincipal">
         </section>
         <section id="imgSecundaria">
-          
+          <img src="">
+          <img src="">
         </section>
-      </section>
+      </div>
     </header>
   </body>
 </html>
