Se comenzó a trabajar en las imagenes secundarias tanto en html como en css.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -29,9 +29,13 @@
         <section id="imgCentro">
           <img src="img/paisaje.jpg" class="imgPrincipal">
         </section>
-        <section id="imgSecundaria">
-          <img src="">
-          <img src="">
+        <section id="imgSecundarias">
+          <div class="imgPaisajeSecundaria">
+            <img src="img/paisaje_secundario.jpg">
+          </div>
+          <div class="imgRetratoSecundario">
+            <img src="img/retratos.jpg">
+          </div>
         </section>
       </div>
     </header>
