Se arreglo la posición y el tamaño de las imágenes secundarias y se agrego la animación para la imagen secundaria del paisaje.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -30,11 +30,13 @@
           <img src="img/paisaje.jpg" class="imgPrincipal">
         </section>
         <section id="imgSecundarias">
-          <div class="imgPaisajeSecundaria">
-            <img src="img/paisaje_secundario.jpg">
-          </div>
-          <div class="imgRetratoSecundario">
-            <img src="img/retratos.jpg">
+          <div class="imgSecundaria">
+            <div id="imgPaisajeSecundaria">
+              <img src="img/paisaje_secundario.jpg" class="imgPaisaje">
+            </div>
+            <div id="imgRetratoSecundario">
+              <img src="img/retratos.jpg" class="imgRetrato">
+            </div>
           </div>
         </section>
       </div>
