Se realizo el pie de pagina.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -39,6 +39,31 @@
             </div>
           </div>
         </section>
+        <section id="pieDePagina">
+          <div class="pieDePagina">
+            <div id="contacto">
+              <h2>Contacto</h2>
+              comenzandofotografia@gmail.com<br>
+              11 calle<br>
+              Tel: 12345678
+            </div>
+            <div id="termino">
+              <h2>Terminos</h2>
+              Conoce nuestros terminos y condiciones...
+            </div>
+            <div id="redesSociales">
+              <h2>Redes Sociales</h2>
+              <img src="img/facebook.jpg" class="redes"> Comenzando Fotografia<br>
+              <img src="img/twitter.png" class="redes"> @ComenzandoFotografia<br>
+              <img src="img/instagram.png" class="redes"> Comenzando Fotografia
+            </div>
+            <div id="derechos">
+              <h2>Derechos</h2>
+              Oscar Motta<br>
+              © Año: 2019
+            </div>
+          </div>
+        </section>
       </div>
     </header>
   </body>
