Se mejoro el encabezado, se agrego la animación del rebote y se termino el pie de pagina.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -11,18 +11,20 @@
     <header>
       <div id="contenido">
         <section id="encabezado">
-          <div id="menu">
-            <div id="titulo">
+          <div class="menu">
+            <div class="titulo">
               Comensando con la Fotografia
             </div>
-            <div>
-              <a class="menu" href="html/Retratos.html">Retratos</a>
-            </div>
-            <div>
-              <a class="menu" href="html/paisajes.html">Paisajes</a>
-            </div>
-            <div>
-              <a href="index.html">Inicio</a>
+            <div class="links">
+              <div>
+                <a class="link" href="html/Retratos.html">Retratos</a>
+              </div>
+              <div>
+                <a class="link" href="html/paisajes.html">Paisajes</a>
+              </div>
+              <div>
+                <a href="index.html">Inicio</a>
+              </div>
             </div>
           </div>
         </section>
