Se agrego las categorías de las imágenes secundarias.

--- a/Evaluacion final 2/index.html
+++ b/Evaluacion final 2/index.html
@@ -34,10 +34,12 @@
         <section id="imgSecundarias">
           <div class="imgSecundaria">
             <div id="imgPaisajeSecundaria">
-              <img src="img/paisaje_secundario.jpg" class="imgPaisaje">
+              <img src="img/paisaje_secundario.jpg" class="imgPaisaje"><br>
+              Paisajes
             </div>
             <div id="imgRetratoSecundario">
-              <img src="img/retratos.jpg" class="imgRetrato">
+              <img src="img/retratos.jpg" class="imgRetrato"><br>
+              Retratos
             </div>
           </div>
         </section>
