Se agregaron los filtros para cada imagen.

--- a/Evaluacion final 2/html/paisajes.html
+++ b/Evaluacion final 2/html/paisajes.html
@@ -30,24 +30,24 @@
       <section id="imgFiltros">
         <div class="imgFiltro">
           <div>
-            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje">
+            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje" id="imagen1">
           </div>
           <div>
-            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje">
+            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje" id="imagen2">
           </div>
           <div>
-            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje">
+            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje" id="imagen3">
           </div>
         </div>
         <div class="imgFiltro">
           <div>
-            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje">
+            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje" id="imagen4">
           </div>
           <div>
-            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje">
+            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje" id="imagen5">
           </div>
           <div>
-            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje">
+            <img src="../img/paisaje_secundario.jpg" class="imgPaisaje" id="imagen6">
           </div>
         </div>
       </section>
