Areglos para su funcionamiento total.

--- a/Evaluacion final 2/html/paisajes.html
+++ b/Evaluacion final 2/html/paisajes.html
@@ -16,10 +16,10 @@
           </div>
           <div class="links">
             <div>
-              <a class="link" href="html/Retratos.html">Retratos</a>
+              <a class="link" href="../html/Retratos.html">Retratos</a>
             </div>
             <div>
-              <a href="html/paisajes.html">Paisajes</a>
+              <a href="../html/paisajes.html">Paisajes</a>
             </div>
             <div>
               <a class="link" href="../index.html">Inicio</a>
